--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Commit and Push Changes
         run: |
           git add last_run.txt
-          git commit -m "Automated daily commit at $(date)" || echo "No changes to commit"
+          git commit -m "Automated daily commit at $(date) to 23f2002600@ds.study.iitm.ac.in" || echo "No changes to commit"
           git push
