--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           echo "Last run: $(date)" > last_run.txt  # Always modify the file
 
-      - name: Commit and Push Changes
+      - name: Commit and Push Changes for 23f2002600@ds.study.iitm.ac.in
         run: |
           git add last_run.txt
-          git commit -m "Automated daily commit at $(date) to 23f2002600@ds.study.iitm.ac.in" || echo "No changes to commit"
+          git commit -m "Automated daily commit at $(date)" || echo "No changes to commit"
           git push
